# ChyrpLite

./: .cache_ggshield  .env  .env.production  .gitignore  README.md  docker-compose.yml  fly.toml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt  test_db_connection.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: main.py  test_db_connection.py
backend/app/api/routes/: __init__.py  admin.py  auth.py  captcha.py  engagement.py  posts.py  rss.py  sitemap.py  taxonomy.py  uploads.py
backend/app/core/: config.py  database.py  middleware.py
backend/app/management/: force_sync.py  inspect_users.py  patch_schema.py
backend/app/models/: __init__.py  engagement.py  post.py  tag.py  taxonomy.py  user.py
backend/app/schemas/: __init__.py  engagement.py  post.py  tag.py  taxonomy.py  user.py
backend/app/services/: auth.py  cache.py  captcha.py  deps.py  mentions.py  storage.py
backend/scripts/: drop_all_tables.py  drop_and_recreate_db.py  reset_alembic_version.py
backend/tests/: test_basic.py
frontend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx  theme-provider.tsx
frontend/app/admin/: page.tsx
frontend/app/auth/: page.tsx
frontend/app/components/: AuthForm.tsx  CommentForm.tsx  CommentList.tsx  Feed.tsx  Markdown.tsx  Navbar.tsx  PostComments.tsx  PostEditor.tsx  PostRenderer.tsx  index.ts
infra/: docker-compose.yml
(+4 files in other folders)
